Refactored some example resources

--- a/nbs/nk-features.ipynb
+++ b/nbs/nk-features.ipynb
@@ -80,9 +80,9 @@
     "> #### A note on `console.log`\n",
     "> `console.log` does not print inside the notebook. Instead, it logs into the Notebook's process terminal like any normal console would expected to do.\n",
     "> This means that this:\n",
-    "![console.log in](console_log_cell.png)\n",
+    "![console.log in](imgs/console_log_cell.png)\n",
     "> will actually be visible here:\n",
-    "![console.log out](console_log_out.png)"
+    "![console.log out](imgs/console_log_out.png)"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "source": [
     "This has the consequence that a `comm_open` is immediatelly broadcast to `iopub` as dictated by the [Jupyter Client Specs](https://jupyter-client.readthedocs.io/en/stable/messaging.html#opening-a-comm). \n",
     "This is how it looks like if you want to feel brave:\n",
-    "![comm_open on wire](comm_open_on_wire.png)\n",
+    "![comm_open on wire](imgs/comm_open_on_wire.png)\n",
     "### Sending data through a comm"
    ]
   },
@@ -650,7 +650,7 @@
    "metadata": {},
    "source": [
     "This ends up calling `comm_msg` and will look like something like this:\n",
-    "![comm_msg on wire](comm_msg_on_wire.png)\n",
+    "![comm_msg on wire](imgs/comm_msg_on_wire.png)\n",
     "\n",
     "### ... and receving some"
    ]
@@ -868,7 +868,7 @@
    "source": [
     "## Interrupting the kernel\n",
     "I'm talking about clicking this:\n",
-    "![Kernel Interrupt Button](kernel_interrupt_button.png)\n",
+    "![Kernel Interrupt Button](imgs/kernel_interrupt_button.png)\n",
     "when you have this (don't ask why!):"
    ]
   },
