--- a/nbs/nk-features.ipynb
+++ b/nbs/nk-features.ipynb
@@ -131,15 +131,15 @@
      "evalue": "Here you go!",
      "output_type": "error",
      "traceback": [
-      "evalmachine.<anonymous>:3",
+      "evalmachine.<anonymous>:4",
       "                    throw new Error('Here you go!');",
       "                    ^",
       "",
       "Error: Here you go!",
-      "    at evalmachine.<anonymous>:3:27",
+      "    at evalmachine.<anonymous>:4:27",
       "    at Script.runInContext (vm.js:137:20)",
       "    at Object.runInContext (vm.js:300:6)",
-      "    at MessageLoop._handleExecuteCodeRequest (/Users/victor.adascalitei/Projects/NodeJS/ijs-playground/src/session/message_loop.js:111:36)"
+      "    at MessageLoop._handleExecuteCodeRequest (/Users/victor.adascalitei/Projects/NodeJS/ijs-playground/src/session/message_loop.js:122:36)"
      ]
     }
    ],
@@ -375,8 +375,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Want to render HTML? \n",
-    "Return an object that has a _\\_toHtml_ function which returns the HTML string you want rendered like so:"
+    "### How about versioning? How does that work?\n",
+    "We expose `kernel.version` to the user-cell which gives access to both a `name` and a `code`. \n",
+    "\n",
+    "The `name` is a dot separated, traditional, version name in the form of `x.y.z.w` where `x.y.z` is the actual supported [Jupyter Client protocol version](https://jupyter-client.readthedocs.io/en/stable/#) while `w` is the build number.\n",
+    "If you want a more numerical value (rather than a string), just go for the `code` which is computed as being `xyz000` + `w` where `x`, `y` and `z` are digits while `w` might be a number which, again is the source-build number."
    ]
   },
   {
@@ -385,12 +388,37 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ name: '5.3.0.1', code: 530001 }"
+     ]
+    }
+   ],
+   "source": [
+    "kernel.print(kernel.version)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Want to render HTML? \n",
+    "Return an object that has a _\\_toHtml_ function which returns the HTML string you want rendered like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<b>I'm a bolded text!</b>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -424,7 +452,7 @@
        "<b>I'm a <i>promised</i> bolded text!</b>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +567,7 @@
        "and returned this string."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,13 +764,13 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfc6aa28d6be4ce98ecb054c4075dd41",
+       "model_id": "5dd01ff6bf2f4493929a40affec046be",
        "version_major": 2,
        "version_minor": 0
       },
