--- a/nbs/nk-features.ipynb
+++ b/nbs/nk-features.ipynb
@@ -756,8 +756,8 @@
    "metadata": {},
    "source": [
     "### _Bonus!_ Emulating a LabelView Jupyter Widget from NodeJs\n",
-    "> Note! You need to have `ipywidgets` installed to make use of them. [Here's](https://ipywidgets.readthedocs.io/en/latest/user_install.html) how you do it.\n",
-    "> Note2! The data payloads you see here on `comms` were reversed engineered from Jupyter Widgets"
+    "> Note$_1$: You need to have `ipywidgets` installed to make use of them. [Here's](https://ipywidgets.readthedocs.io/en/latest/user_install.html) how you do it.  \n",
+    "> Note$_2$: The data payloads you see here on `comms` were reversed engineered from Jupyter Widgets"
    ]
   },
   {
