A bit of content editing on the features notebook.

--- a/nbs/nk-features.ipynb
+++ b/nbs/nk-features.ipynb
@@ -677,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This ends up calling `comm_msg` and will look like something like this:\n",
+    "This ends up calling `comm_msg` and will look (on _the wire_) something like this:\n",
     "![comm_msg on wire](imgs/comm_msg_on_wire.png)\n",
     "\n",
     "### ... and receving some"
@@ -756,8 +756,8 @@
    "metadata": {},
    "source": [
     "### _Bonus!_ Emulating a LabelView Jupyter Widget from NodeJs\n",
-    "> Note$_1$: You need to have `ipywidgets` installed to make use of them. [Here's](https://ipywidgets.readthedocs.io/en/latest/user_install.html) how you do it.  \n",
-    "> Note$_2$: The data payloads you see here on `comms` were reversed engineered from Jupyter Widgets"
+    "> Note #1: You need to have `ipywidgets` installed to make use of them. [Here's](https://ipywidgets.readthedocs.io/en/latest/user_install.html) how you do it.  \n",
+    "> Note #2: The data payloads you see here on `comms` were reversed engineered from Jupyter Widgets"
    ]
   },
   {
