Added missing link + forgot to commit the updated features notebook.

--- a/nbs/nk-features.ipynb
+++ b/nbs/nk-features.ipynb
@@ -16,7 +16,8 @@
     "* `URL` and `URLSearchParams`\n",
     "* `WebAssembly`\n",
     "* `Promise` and `Error`\n",
-    "As you can see, and for security purposes, `process` is not part of this list.\n",
+    "\n",
+    "As you can see, and for security purposes, `process` and `global` are not part of this list.\n",
     "\n",
     "Replacing `process` is a `kernel` object through which you can access the NodeJS's functionality and info.\n",
     "\n",
@@ -139,7 +140,7 @@
       "    at evalmachine.<anonymous>:4:27",
       "    at Script.runInContext (vm.js:137:20)",
       "    at Object.runInContext (vm.js:300:6)",
-      "    at MessageLoop._handleExecuteCodeRequest (/Users/victor.adascalitei/Projects/NodeJS/ijs-playground/src/session/message_loop.js:122:36)"
+      "    at MessageLoop._handleExecuteCodeRequest (/Users/victor.adascalitei/Projects/NodeJS/ijs-playground/src/session/message_loop.js:134:36)"
      ]
     }
    ],
@@ -611,7 +612,8 @@
    "source": [
     "# The juicy stuff\n",
     "## Comms\n",
-    "`comms` are way to [relay data](https://jupyter-client.readthedocs.io/en/stable/messaging.html#custom-messages) between the kernel and Jupyter. The best example of their usage is the [Jupyter Widgets](https://ipywidgets.readthedocs.io/en/latest/index.html) project.\n",
+    "`comms` are a way to [relay data](https://jupyter-client.readthedocs.io/en/stable/messaging.html#custom-messages) between the kernel and Jupyter. The best example of their usage is the [Jupyter Widgets](https://ipywidgets.readthedocs.io/en/latest/index.html) project. To make these mechanics possible, we export `kernel.commManager` which lets you work with them.\n",
+    "\n",
     "### Opening one\n",
     "This is how you do in the fastest way possible:"
    ]
@@ -622,14 +624,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "let comm = kernel.newComm()"
+    "let comm = kernel.commManager.newComm()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, they start-off with an empty data payload `{}` and it targets `jknb.comm` (the 'jknb' prefix is for historical reasons). If you want to have a different target-name, a payload and/or a metadata even, you can use the more sofisticated way of opening a comm via the `kernel.newCommFor` method call like so: "
+    "By default, they start-off with an empty data payload `{}` and it targets `jknb.comm` (the 'jknb' prefix was left for historical reasons). If you want to have a different target-name, a payload and/or a metadata even, you can use the more sophisticated way of opening a comm via the `kernel.commManager.newCommFor` method call like so: "
    ]
   },
   {
@@ -638,7 +640,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var myComm = kernel.newCommFor({\n",
+    "var myComm = kernel.commManager.newCommFor({\n",
     "    targetName: 'my-target-name',\n",
     "    initialData: {\n",
     "        aVariable: 42\n",
@@ -770,7 +772,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5dd01ff6bf2f4493929a40affec046be",
+       "model_id": "896b8a82a4544db2814a62ad73cbecfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -787,7 +789,7 @@
     "    constructor(value) {\n",
     "        super();\n",
     "        this._value = value;\n",
-    "        this._wComm = kernel.newCommFor({\n",
+    "        this._wComm = kernel.commManager.newCommFor({\n",
     "                targetName: 'jupyter.widget',\n",
     "                initialData: {\n",
     "                    state: {\n",
